--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -86,6 +86,26 @@
         android:background="#C5BFBF"
         android:textColor="#000000"/>
 
+    <TextView
+        android:id="@+id/fourthTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Confirm Password"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="100dp"
+        android:textColor="#FFFFFF"/>
+
+    <EditText
+        android:id="@+id/passconf"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
+        android:ems="10"
+        android:layout_marginTop="5dp"
+        android:inputType="textPassword"
+        android:background="#C5BFBF"
+        android:textColor="#000000"/>
+
     <Button
         android:id="@+id/register"
         android:layout_width="wrap_content"
