--- a/app/src/main/res/layout/worker.xml
+++ b/app/src/main/res/layout/worker.xml
@@ -1,6 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/download6"
+    android:orientation="vertical"
+    tools:ignore="MissingConstraints"
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="0dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/signout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SIGN OUT"
+            android:layout_marginLeft="290dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="20dp">
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name"
+            android:textSize="95dp"
+            android:textColor="#FFFFFF"
+            android:layout_marginLeft="15dp"/>
+        <TextView
+            android:id="@+id/email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Email"
+            android:textSize="50dp"
+            android:textColor="#FFFFFF"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="40dp"/>
+        <TextView
+            android:id="@+id/desg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Subs"
+            android:textSize="50dp"
+            android:textColor="#FFFFFF"
+            android:layout_marginLeft="15dp"/>
+        <TextView
+            android:id="@+id/sal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Salary"
+            android:textSize="50dp"
+            android:textColor="#FFFFFF"
+            android:layout_marginLeft="15dp"/>
+        <TextView
+            android:id="@+id/Status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pending"
+            android:textSize="50dp"
+            android:textColor="#FFFFFF"
+            android:layout_marginLeft="15dp"/>
+        <TextView
+            android:id="@+id/working"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Working hours"
+            android:textSize="50dp"
+            android:textColor="#FFFFFF"
+            android:layout_marginLeft="15dp"/>
+        <TextView
+            android:id="@+id/Students"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Students"
+            android:textSize="50dp"
+            android:textColor="#FFFFFF"
+            android:layout_marginLeft="15dp"/>
+
+    </LinearLayout>
+</LinearLayout>
