--- a/app/src/main/res/layout/manager.xml
+++ b/app/src/main/res/layout/manager.xml
@@ -29,6 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
@@ -60,6 +61,11 @@
                 android:textColor="#FFFFFF"
                 android:layout_marginLeft="15dp"/>
 
+            <ListView
+                android:id="@+id/memlist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
         </LinearLayout>
 
         <LinearLayout
@@ -75,6 +81,11 @@
                 android:textSize="40dp"
                 android:textColor="#FFFFFF"
                 android:layout_marginLeft="15dp"/>
+
+            <ListView
+                android:id="@+id/worlist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
         </LinearLayout>
     </LinearLayout>
 
