--- a/app/src/main/res/layout/worker.xml
+++ b/app/src/main/res/layout/worker.xml
@@ -75,14 +75,28 @@
             android:textSize="50dp"
             android:textColor="#FFFFFF"
             android:layout_marginLeft="15dp"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/Students22"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Students:"
+                android:textSize="50dp"
+                android:textColor="#FFFFFF"
+                android:layout_marginLeft="15dp"/>
         <TextView
             android:id="@+id/Students"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Students"
-            android:textSize="50dp"
+            android:textSize="35dp"
             android:textColor="#FFFFFF"
             android:layout_marginLeft="15dp"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 </LinearLayout>
