--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,12 +42,12 @@
             android:layout_height="?actionBarSize"
             android:layout_margin="20dp"
             android:background="@drawable/rounded_corner"
-            android:hint="Email"
+            android:hint="@string/email"
             android:paddingStart="10dp"
-            android:paddingLeft="10dp"
             android:textColor="#0B0B0B"
             android:textColorHint="#eee"
-            android:textSize="17sp" />
+            android:textSize="17sp"
+            tools:ignore="RtlSymmetry" />
 
         <EditText
             android:id="@+id/pass1"
@@ -55,13 +55,15 @@
             android:layout_height="?actionBarSize"
             android:layout_margin="20dp"
             android:background="@drawable/rounded_corner"
-            android:hint="Password"
+            android:hint="@string/password"
             android:inputType="textPassword"
             android:paddingStart="10dp"
-            android:paddingLeft="10dp"
             android:textColor="#000000"
             android:textColorHint="#eee"
-            android:textSize="17sp" />
+            android:textSize="17sp"
+            tools:ignore="RtlSymmetry" />
+
+
 
 
         <LinearLayout
@@ -74,66 +76,26 @@
                 android:id="@+id/login"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="120dp"
-                android:text="Login" />
+                android:layout_marginStart="120dp"
+                android:text="@string/login" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="7dp"
-                android:text="OR" />
+                android:text="@string/or" />
 
             <Button
                 android:id="@+id/register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/login"
-                android:text="Register" />
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:text="Forgot Password?"
-            android:textColor="#fff" />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_marginBottom="30dp"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_marginBottom="10dp"
-            android:text="Or Signup with"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <ImageButton
-                android:layout_marginRight="15dp"
-                android:background="@drawable/google"
-                android:layout_width="40dp"
-                android:layout_height="40dp" />
-            <ImageButton
-                android:layout_marginRight="15dp"
-                android:background="@drawable/facebook_box"
-                android:layout_width="40dp"
-                android:layout_height="40dp" />
-            <ImageButton
-                android:background="@drawable/twitter"
-                android:layout_width="40dp"
-                android:layout_height="40dp" />
+                android:text="@string/register" />
         </LinearLayout>
 
 
     </LinearLayout>
+
+
+
 
 </RelativeLayout>
