--- a/app/src/main/res/layout/manager.xml
+++ b/app/src/main/res/layout/manager.xml
@@ -18,8 +18,8 @@
             android:id="@+id/signout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="SIGN OUT"
-            android:layout_marginLeft="300dp"/>
+            android:text="@string/sign_out"
+            android:layout_marginStart="300dp"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
@@ -34,18 +34,18 @@
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name"
-            android:textSize="95dp"
+            android:text="@string/name"
+            android:textSize="95sp"
             android:textColor="#FFFFFF"
-            android:layout_marginLeft="15dp"/>
+            android:layout_marginStart="15dp"/>
             <TextView
                 android:id="@+id/name2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Manager"
-                android:textSize="30dp"
+                android:text="@string/manager"
+                android:textSize="30sp"
                 android:textColor="#FFFFFF"
-                android:layout_marginLeft="15dp"/>
+                android:layout_marginStart="15dp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -56,10 +56,10 @@
                 android:id="@+id/members"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Members"
-                android:textSize="40dp"
+                android:text="@string/members"
+                android:textSize="40sp"
                 android:textColor="#FFFFFF"
-                android:layout_marginLeft="15dp"/>
+                android:layout_marginStart="15dp"/>
 
             <ListView
                 android:id="@+id/memlist"
@@ -77,7 +77,7 @@
                 android:id="@+id/workers"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Workers"
+                android:text="@string/workers"
                 android:textSize="40dp"
                 android:textColor="#FFFFFF"
                 android:layout_marginLeft="15dp"/>
