--- a/app/src/main/res/layout/member.xml
+++ b/app/src/main/res/layout/member.xml
@@ -18,8 +18,8 @@
             android:id="@+id/signout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="SIGN OUT"
-            android:layout_marginLeft="290dp"/>
+            android:text="@string/sign_out"
+            android:layout_marginStart="290dp"/>
     </LinearLayout>
      <LinearLayout
         android:layout_width="wrap_content"
@@ -30,38 +30,38 @@
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name"
-            android:textSize="95dp"
+            android:text="@string/name"
+            android:textSize="95sp"
             android:textColor="#FFFFFF"
-            android:layout_marginLeft="15dp"/>
+            android:layout_marginStart="15dp"/>
         <TextView
             android:id="@+id/email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Email"
-            android:textSize="40dp"
+            android:text="@string/email"
+            android:textSize="40sp"
             android:textColor="#FFFFFF"
-            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="40dp"/>
 
         <TextView
             android:id="@+id/subs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Subs"
-            android:textSize="40dp"
+            android:text="@string/subs"
+            android:textSize="40sp"
             android:textColor="#FFFFFF"
-            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="20dp"/>
         <TextView
             android:id="@+id/valid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Valid"
-            android:textSize="40dp"
+            android:text="@string/valid"
+            android:textSize="40sp"
             android:textColor="#FFFFFF"
             android:layout_marginTop="20dp"
-            android:layout_marginLeft="15dp"/>
+            android:layout_marginStart="15dp"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -72,16 +72,16 @@
             android:id="@+id/Status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pending"
-            android:textSize="40dp"
+            android:text="@string/pending"
+            android:textSize="40sp"
             android:textColor="#FFFFFF"
-            android:layout_marginLeft="15dp"/>
+            android:layout_marginStart="15dp"/>
 
             <Button
                 android:id="@+id/pay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="PAY NOw"
+                android:text="@string/pay_now"
                 android:layout_marginLeft="20dp"/>
 
     </LinearLayout>
