--- a/app/src/main/res/layout/worker.xml
+++ b/app/src/main/res/layout/worker.xml
@@ -18,8 +18,8 @@
             android:id="@+id/signout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="SIGN OUT"
-            android:layout_marginLeft="290dp"/>
+            android:text="@string/sign_out"
+            android:layout_marginStart="290dp"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
@@ -30,51 +30,51 @@
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name"
-            android:textSize="95dp"
+            android:text="@string/name"
+            android:textSize="95sp"
             android:textColor="#FFFFFF"
-            android:layout_marginLeft="15dp"/>
+            android:layout_marginStart="15dp"/>
         <TextView
             android:id="@+id/email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Email"
-            android:textSize="50dp"
+            android:text="@string/email"
+            android:textSize="50sp"
             android:textColor="#FFFFFF"
-            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="40dp"/>
         <TextView
             android:id="@+id/desg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Subs"
-            android:textSize="50dp"
+            android:text="@string/subs1"
+            android:textSize="50sp"
             android:textColor="#FFFFFF"
-            android:layout_marginLeft="15dp"/>
+            android:layout_marginStart="15dp"/>
         <TextView
             android:id="@+id/sal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Salary"
-            android:textSize="50dp"
+            android:text="@string/salary111"
+            android:textSize="50sp"
             android:textColor="#FFFFFF"
-            android:layout_marginLeft="15dp"/>
+            android:layout_marginStart="15dp"/>
         <TextView
             android:id="@+id/Status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pending"
-            android:textSize="50dp"
+            android:text="@string/pending11"
+            android:textSize="50sp"
             android:textColor="#FFFFFF"
-            android:layout_marginLeft="15dp"/>
+            android:layout_marginStart="15dp"/>
         <TextView
             android:id="@+id/working"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Working hours"
-            android:textSize="50dp"
+            android:text="@string/working_hours"
+            android:textSize="50sp"
             android:textColor="#FFFFFF"
-            android:layout_marginLeft="15dp"/>
+            android:layout_marginStart="15dp"/>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -83,18 +83,18 @@
                 android:id="@+id/Students22"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Students:"
-                android:textSize="50dp"
+                android:text="@string/studentse"
+                android:textSize="50sp"
                 android:textColor="#FFFFFF"
-                android:layout_marginLeft="15dp"/>
+                android:layout_marginStart="15dp"/>
         <TextView
             android:id="@+id/Students"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Students"
-            android:textSize="35dp"
+            android:text="@string/students11"
+            android:textSize="35sp"
             android:textColor="#FFFFFF"
-            android:layout_marginLeft="15dp"/>
+            android:layout_marginStart="15dp"/>
 
         </LinearLayout>
 
