--- a/app/src/main/res/layout/displist.xml
+++ b/app/src/main/res/layout/displist.xml
@@ -10,6 +10,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:padding="10dip"
+    android:textColor="#FFFFFF"
     android:textSize="16sp"
     android:textStyle="bold" >
 </TextView>
@@ -17,6 +18,7 @@
 android:id="@+id/displist2"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
+    android:textColor="#FFFFFF"
 android:padding="10dip"
 android:textSize="16sp"
 android:textStyle="bold" >
