--- a/app/src/main/res/layout/token.xml
+++ b/app/src/main/res/layout/token.xml
@@ -16,6 +16,7 @@
         android:layout_marginStart="95dp"
         android:layout_marginTop="250dp"
         android:background="#E3DFDF"
+        android:id="@+id/tokken1"
         android:hint="@string/token"
         android:textSize="80sp" />
 
